@startuml
title InternityManager - Class Diagram

class InternityManager {
    - scanner: Scanner
    - commandParser: CommandParser
    + InternityManager(storagePath: String)
    + start(): void
    - loadData(): void
    - saveData(): void
    - configureUsername(): void
    - isValidUsername(username: String): boolean
}

class CommandParser
class InternshipList
class Storage
class Ui
class Command

InternityManager --> CommandParser : uses
InternityManager --> InternshipList : manages data
InternityManager --> Storage : initializes
InternityManager --> Ui : prints messages
CommandParser --> Command : returns
InternshipList --> Storage : uses

@enduml
